--- a/build.gradle
+++ b/build.gradle
@@ -31,5 +31,15 @@ dependencies {
 	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+	compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.0.5.RELEASE'
+	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
+	compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.0.5.RELEASE'
+	compile group: 'org.springframework.security', name: 'spring-security-web', version: '5.0.5.RELEASE'
+	compile group: 'org.springframework.security', name: 'spring-security-config', version: '5.0.5.RELEASE'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.0.2.RELEASE'
+	
+	
+	
+	
 	
 }
